// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Builder (activity) > should build  1`] = `
{
  "activities": {
    "cloud.ui#B": {
      "id": "cloud.ui#B",
      "modelRef": "cloud.ui",
      "name": "B",
      "steps": [],
    },
    "customer#A": {
      "id": "customer#A",
      "modelRef": "customer",
      "name": "A",
      "steps": [],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "cloud": {
      "color": "primary",
      "description": null,
      "id": "cloud",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    "cloud.ui": {
      "color": "primary",
      "description": null,
      "id": "cloud.ui",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "ui",
    },
    "customer": {
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "actor": {},
      "component": {},
      "system": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;

exports[`Builder (activity) > should build steps 1`] = `
{
  "activities": {
    "cloud.api#B": {
      "id": "cloud.api#B",
      "modelRef": "cloud.api",
      "name": "B",
      "steps": [
        {
          "id": "step_cloud.api#B_1",
          "isBackward": false,
          "target": {
            "model": "customer",
          },
        },
      ],
    },
    "cloud.ui#C": {
      "id": "cloud.ui#C",
      "modelRef": "cloud.ui",
      "name": "C",
      "steps": [
        {
          "id": "step_cloud.ui#C_1",
          "isBackward": false,
          "target": {
            "activity": "cloud.api#B",
          },
        },
        {
          "id": "step_cloud.ui#C_2",
          "isBackward": true,
          "target": {
            "activity": "cloud.api#B",
          },
        },
      ],
    },
  },
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "cloud": {
      "color": "primary",
      "description": null,
      "id": "cloud",
      "kind": "system",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    "cloud.api": {
      "color": "primary",
      "description": null,
      "id": "cloud.api",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "api",
    },
    "cloud.ui": {
      "color": "primary",
      "description": null,
      "id": "cloud.ui",
      "kind": "component",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "ui",
    },
    "customer": {
      "color": "primary",
      "description": null,
      "id": "customer",
      "kind": "actor",
      "links": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "relations": {},
  "specification": {
    "deployments": {},
    "elements": {
      "actor": {},
      "component": {},
      "system": {},
    },
    "relationships": {},
    "tags": [],
  },
  "views": {},
}
`;
